Fix alignment of header on wide screens
Header needs to be centered. This only showed up when the screen was
wider than 1000px or so.

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 /* Sections */
 
 
-body > header, body > section, body > footer {
+body > section, body > footer {
   float: left;
   width: 100%;
   clear: both;
